changing fodler structure

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/filter.css" rel="stylesheet">
+        <link href="public/css/filter.css" rel="stylesheet">
 
-        <script type="text/javascript" src="js/Image.js"></script>
-        <script type="text/javascript" src="views/home/HomeController.js"></script>
+        <script type="text/javascript" src="public/js/Image.js"></script>
+        <script type="text/javascript" src="public/views/home/HomeController.js"></script>
     </div>
 
 </body>
